--- a/application/views/frontend/meta.html
+++ b/application/views/frontend/meta.html
@@ -15,6 +15,8 @@
         <script src="<?=ASSETS_PATH?>web/js/script.js"></script>
 		<script>
             var isactivepages ='<?=$this->load->controller()?>';
+			var locale = <?=LOCALE?>;
+			var basedomain = '<?=BASE_PATH?>';
         </script>
 		<script>
             function toggleCodes(on) {
