--- a/application/views/frontend/post/detail.html
+++ b/application/views/frontend/post/detail.html
@@ -10,12 +10,12 @@
                            
 					</div>
                         <div class="shareButton right">
+                            <a href="javascript:void(0)" class="addcool"  vsid="<?=$val['vsid']?>" ct="<?=$val['cool']['total']?>" >
+                                <i class="icon-thumbs-up" ></i>Cool <span class="vcool"><?=$val['cool']['total']?></span></a>
                             <a href="#">
-                                <i class="icon-thumbs-up"></i>Cool <span class=""><?=$val['cool']['total']?></span></a>
+                                <i class="icon-facebook-1"></i>Share <span class="">0</span></a>
                             <a href="#">
-                                <i class="icon-facebook-1"></i>Share <span class=""><?=$val['views']?></span></a>
-                            <a href="#">
-                                <i class="icon-twitter-1"></i>Twitter <span class="">97</span></a>
+                                <i class="icon-twitter-1"></i>Twitter <span class="">0</span></a>
                         </div>
                     </div>
                     <div class="clearit"></div>
