--- a/application/views/frontend/home/homepage.html
+++ b/application/views/frontend/home/homepage.html
@@ -68,7 +68,7 @@
                                     </a></div>
                                 <div class="right">
                                 <span>
-                                    <i class="icon-thumbs-up">&nbsp;<?=$val['cool']['total']?></i>
+                                    <i class="icon-thumbs-up addcool"  cid="<?=$val['id']?>" vsid="<?=$val['vsid']?>" ct="<?=$val['cool']['total']?>"  >&nbsp;<span class="vcool<?=$val['id']?>" ><?=$val['cool']['total']?></span></i>
                                     <i class="icon-comment-1">&nbsp;<?=$val['comment']['total']?></i>
                                 </span>
                                 </div>
