--- a/application/views/frontend/post/detail.html
+++ b/application/views/frontend/post/detail.html
@@ -10,8 +10,8 @@
                            
 					</div>
                         <div class="shareButton right">
-                            <a href="javascript:void(0)" class="addcool"  vsid="<?=$val['vsid']?>" ct="<?=$val['cool']['total']?>" >
-                                <i class="icon-thumbs-up" ></i>Cool <span class="vcool"><?=$val['cool']['total']?></span></a>
+                            <a href="javascript:void(0)" class="addcool"  vsid="<?=$val['vsid']?>" ct="<?=$val['cool']['total']?>" cid="<?=$val['id']?>" >
+                                <i class="icon-thumbs-up" ></i>Cool <span class="vcool<?=$val['id']?>"><?=$val['cool']['total']?></span></a>
                             <a href="#">
                                 <i class="icon-facebook-1"></i>Share <span class="">0</span></a>
                             <a href="#">
