--- a/assets/web/css/style.css
+++ b/assets/web/css/style.css
@@ -592,9 +592,11 @@ a.titleBlock:hover {
     vertical-align: middle;
     position: relative;
 }
+
+/* ini box ya ki*/
 .item3 img {
-    width:220%;
-    height: auto;
+    width:100%;
+    height: 100%;
 }
 .item3 a {
     position: absolute;
