--- a/application/views/frontend/meta.html
+++ b/application/views/frontend/meta.html
@@ -1,6 +1,6 @@
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <title>ADS BLOCK</title>
+        <title>Ads - Blocks </title>
         <link href="<?=ASSETS_PATH?>web/css/style.css" rel="stylesheet" type="text/css" />
         <link href="<?=ASSETS_PATH?>web/css/fonts.css" rel="stylesheet" type="text/css" />
         <link rel="stylesheet" href="<?=ASSETS_PATH?>web/css/fontello.css">
