--- a/application/views/frontend/navigation.html
+++ b/application/views/frontend/navigation.html
@@ -27,7 +27,7 @@
                 <!-- search : s -->
                 <div class="search1 right">
                     <i class="icon-search"></i>&nbsp;
-                    <input class="defaultText searchPost" type="text" value="<?php echo $qs ? $qs : 'Search' ?>"  />
+                    <input class="defaultText searchPost" type="text" value="<?php echo $qs ? $qs : '' ?>" placeholder='Search' />
                 </div>
                 <!-- search : e -->
                 
