--- a/application/views/frontend/navigation-left.html
+++ b/application/views/frontend/navigation-left.html
@@ -9,12 +9,15 @@
 					<br />
                     <!-- buttonNav : e -->
                     <!-- username & help : s -->
-                <div class="userNameHelp clearfix">
+			 
+               	<div class="userNameHelp clearfix">
                     <div class="userName left">
                         <div class="imgUserName left"></div>
-                        <a href="#"><?=$users['nickname']?>
- 
+                        <div class="userProfileSet left">
+                        <a href="#"><?=$users['nickname']?> 
                         </a>
+						 <a href="settingprofile.html" class="settingProfile">Settings <i class="icon-cog-1"></i></a>
+                     </div>
                     </div>
  
                 </div>
@@ -34,10 +37,13 @@
  
                                 <div class="categoriesTitle lefte"><a href="#">My Inbox</a></div>
                             </li>
+							  -->
                             <li class="clearfix">
  
                                 <div class="categoriesTitle left"><a href="myprofile.html">My Profile</a></div>
                             </li>
+							
+							<!--
                             <li class="clearfix">
  
                                 <div class="categoriesTitle left"><a href="#">Notifications</a></div>
@@ -52,7 +58,7 @@
                     </div>
                     <!-- categories : e -->
                     <!-- categories : s -->
-					<!--
+					 
                     <div class="categories">
                         <h1>Your Communities
                             <i class="icon-plus-circle plusCategories"></i>
@@ -84,43 +90,21 @@
                             </li>
                         </ul>
                     </div>
-					-->
+ 
                     <!-- categories : e -->
-                    <!-- categories : s -->
-                    <div class="categories">
-                        <h1>settings
-                  
-                        </h1>
-                        <ul>
-                            <li class="clearfix">
- 
-                                <div class="categoriesTitle left"><a href="#">Profile</a></div>
-                            </li>
-                            <li class="clearfix">
- 
-                                <div class="categoriesTitle left"><a href="#">Account</a></div>
-                            </li>
-							<!--
-                            <li class="clearfix">
- 
-                                <div class="categoriesTitle left"><a href="#">Notifications</a></div>
-                            </li>
-                            -->
-                        </ul>
-                    </div>
-                    <!-- categories : e -->
+                   
                     <!-- categories : s -->
                     <div class="categories" style="border-top:solid px #202020;">
                         <h1>
  
                         </h1>
                         <ul>
-						<!--
+						 
                             <li class="clearfix">
  
                                 <div class="categoriesTitle left"><a href="#">Help</a></div>
                             </li>
-						-->
+						 
                             <li class="clearfix">
  
                                 <div class="categoriesTitle left"><a href="<?=BASE_PATH?>logout">Logout</a></div>
