readeable time date

--- a/application/views/frontend/home/homepage.html
+++ b/application/views/frontend/home/homepage.html
@@ -79,7 +79,7 @@
 								<?php if($items==3) : ?>  
 										<?=$val['caption']?>
 								<?php else : ?>
-										<?=$val['content']?>
+										<?=$val['caption']?>
 								<?php endif ?>
 								</a>
                             </div>
